feat(auth & chat): add admin registration and chat room retrieval by ID